--- a/portfolio/src/styles.scss
+++ b/portfolio/src/styles.scss
@@ -21,6 +21,7 @@ app-root {
   align-items: flex-start;
   justify-content: space-between;
   min-height: 100vh;
+  overflow:hidden;
 }
 
 .home-body {
@@ -279,5 +280,126 @@ app-root {
   100% {
     background-color: #FFFFFF;
     box-shadow: 0 0 10px 0px rgba(255, 255, 255, 0.2);
+  }
+}
+
+.row {
+  display: flex;
+  justify-content: space-between; /* Spread columns evenly */
+    margin-bottom: 20px;
+}
+
+.tech {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%; 
+}
+
+.tech-hidden {
+  background-color: rgba(210, 210, 210, 0.5);
+  color: white;
+  padding: 10px;
+  margin: 5px;
+  border-radius: 5px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.tech-hidden::before {
+  content: '';
+  position: absolute;
+  top: var(--y);
+  left: var(--x);
+  width: 300%;
+  height: 300%;
+  background: radial-gradient(circle at center, transparent 10%, rgba(0,0,0,0.95));
+  border-radius: 50%;
+  pointer-events: none;
+  transform: translate(-50%, -50%);
+  transition: transform 0.1s;
+  opacity: 0;
+}
+
+.tech-hidden:hover::before {
+  opacity: 1; /* Show the beam on hover */
+}
+
+.tech:nth-child(2) {
+  transition-delay: 200ms;
+}
+.tech:nth-child(3) {
+  transition-delay: 400ms;
+}
+.tech:nth-child(4) {
+  transition-delay: 600ms;
+}
+.tech:nth-child(5) {
+  transition-delay: 800ms;
+}
+.tech:nth-child(6) {
+  transition-delay: 1000ms;
+}
+
+.home-section:before {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: linear-gradient(to top, #0a2a43, transparent);
+    z-index: 10000;
+}
+
+.home-section:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: #0a2a43;
+    z-index: 10000;
+    mix-blend-mode: color;
+
+}
+
+#text {
+    position: relative;
+    color: transparent;
+    font-size: 10em;
+    z-index: 2;
+    span {
+        animation: animate 4s linear forwards;
+
+    }
+    span:nth-child(1) {
+        animation-delay: 0s;
+    }
+    span:nth-child(2) {
+        animation-delay: 0.1s;
+    }
+    span:nth-child(3) {
+        animation-delay: 0.2s;
+    }
+    span:nth-child(4) {
+        animation-delay: 0.3s;
+    }
+    span:nth-child(5) {
+        animation-delay: 0.4s;
+    }
+    span:nth-child(6) {
+        animation-delay: 0.5s;
+    }
+    span:nth-child(7) {
+        animation-delay: 0.6s;
+    }
+
+}
+
+@media(prefers-reduced-motion) {
+  .hidden-home {
+    transition: none;
   }
 }
